<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quadratic Assistant</string>
    <string name="action_settings">Settings</string>
    <string name="string_begincalculate">Calculate</string>
    <string name="string_instructions">Instructions</string>
    <string name="string_about_us">About Us</string>
    <string name="string_insert">Insert</string>
    <string name="string_enter">Enter</string>
    <string name="string_convert">Convert</string>
    <string name="string_vertex">Vertex</string>
    <string name="string_v2s">Vertex to Standard</string>
    <string name="string_f2s">Factored to Standard</string>
    <string name="string_v2f">Vertex to Factored</string>
    <string name="string_f2v">Factored to Vertex</string>
    <string name="string_select">Select Calculation</string>
    <string name="string_s2v">Standard to Vertex</string>
    <string name="string_s2f">Standard to Factored</string>
    <string name="title_activity_second_screen">Calculate</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_instructions">Instructions</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_splashscreen">Splashscreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_convert">Convert</string>
    <string name="string_equals">Select</string>
    <string name="CakeWire">CakeWire</string>
    <string name="TheAppetizers">App-etizers</string>
    <string name="convert">Convert</string>
    <string name="title_activity_calc_results">CalcResults</string>
    <string name="string_numA">a:</string>
    <string name="string_numB">b:</string>
    <string name="string_numC">c:</string>
    <string name="string_showWork">Show Work</string>
    <string name="string_numH">h:</string>
    <string name="string_numK">k:</string>
    <string name="string_numX">x  :</string>
    <string name="string_valueEnter">Enter Value Here</string>
    <string name="string_one">1</string>
    <string name="string_two">2</string>
    <string name="Instructions">The formulas for the three forms are as followed, vertex is :y=a(x-h)²+k, Factored form is :(a-x) (b-x), Standard form is :ax²+bx+c. Press Calculate to start converting equations. Select form and enter numbers and then convert.</string>

</resources>
