<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_cal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Convert" >

    <TextView
        android:id="@+id/convert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/string_convert"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/numA_Field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/convert"
        android:layout_alignRight="@+id/convert"
        android:ems="10"
        android:hint="@string/string_valueEnter"
        android:inputType="number|numberSigned|numberDecimal" />

    <EditText
        android:id="@+id/numB_Field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/numA_Field"
        android:layout_below="@+id/numA_Field"
        android:ems="10"
        android:hint="@string/string_valueEnter"
        android:inputType="number|numberSigned|numberDecimal" />

    <EditText
        android:id="@+id/numC_Field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/numB_Field"
        android:layout_below="@+id/numB_Field"
        android:ems="10"
        android:hint="@string/string_valueEnter"
        android:inputType="number|numberSigned|numberDecimal" />

    <Button
        android:id="@+id/button_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/check_showWork"
        android:layout_alignRight="@+id/check_showWork"
        android:text="@string/title_activity_second_screen" />

    <CheckBox
        android:checked="true"
        android:id="@+id/check_showWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp"
        android:text="@string/string_showWork" />

    <EditText
        android:id="@+id/numX2_Field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/numX1_Field"
        android:layout_below="@+id/numX1_Field"
        android:ems="10"
        android:hint="@string/string_valueEnter"
        android:inputType="number|numberSigned|numberDecimal" />

    <EditText
        android:id="@+id/numK_Field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/numH_Field"
        android:layout_below="@+id/numH_Field"
        android:ems="10"
        android:hint="@string/string_valueEnter"
        android:inputType="number|numberSigned|numberDecimal" />

    <EditText
        android:id="@+id/numH_Field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/numA_Field"
        android:layout_below="@+id/numA_Field"
        android:ems="10"
        android:hint="@string/string_valueEnter"
        android:inputType="number|numberSigned|numberDecimal" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/numX1_Field"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/numA_Field"
        android:layout_below="@+id/numA_Field"
        android:ems="10"
        android:hint="@string/string_valueEnter"
        android:inputType="number|numberSigned|numberDecimal" />

    <TextView
        android:id="@+id/numA_text"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/numA_Field"
        android:layout_alignBottom="@+id/numA_Field"
        android:layout_toLeftOf="@+id/numA_Field"
        android:text="@string/string_numA" />
    
    <TextView
        android:id="@+id/numB_text"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/numB_Field"
        android:layout_alignBottom="@+id/numB_Field"
        android:layout_toLeftOf="@+id/numB_Field"
        android:text="@string/string_numB" />
    
    <TextView
        android:id="@+id/numC_text"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/numC_Field"
        android:layout_alignBottom="@+id/numC_Field"
        android:layout_toLeftOf="@+id/numC_Field"
        android:text="@string/string_numC" />
    
    <TextView
        android:id="@+id/numH_text"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/numH_Field"
        android:layout_alignBottom="@+id/numH_Field"
        android:layout_toLeftOf="@+id/numH_Field"
        android:text="@string/string_numH" />
    
    <TextView
        android:id="@+id/numK_text"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/numK_Field"
        android:layout_alignBottom="@+id/numK_Field"
        android:layout_toLeftOf="@+id/numK_Field"
        android:text="@string/string_numK" />
    
    <TextView
        android:id="@+id/numX1_text"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/numX1_Field"
        android:layout_alignBottom="@+id/numX1_Field"
        android:layout_toLeftOf="@+id/numX1_Field"
        android:text="@string/string_numX" />
    
    <TextView
        android:id="@+id/numX2_text"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/numX2_Field"
        android:layout_alignBottom="@+id/numX2_Field"
        android:layout_toLeftOf="@+id/numX2_Field"
        android:text="@string/string_numX" />

</RelativeLayout>